# agentic_chatbot

./: .dockerignore  .env.example  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_DB_DEFINITION.md  Makefile  README.md  database.py  docker-compose.yml  main.py  policies.txt  pyproject.toml  requirements.txt  tools.py
